# Automatic-Parallelization

./: CMakeLists.txt  dep.cpp  frame.h  framework.h  text.h  tool.cpp
